Added designation of the place where the comment was changed for subsequent elements of each signature